--- a/src/framework/theme/components/layout/layout.component.scss
+++ b/src/framework/theme/components/layout/layout.component.scss
@@ -11,7 +11,7 @@
     display: block;
 
     nav {
-      justify-content: center;
+      align-items: center;
       display: flex;
     }
 
@@ -23,7 +23,7 @@
     }
   }
 
-  .container {
+  .layout-container {
     flex: 1;
     display: flex;
     flex-direction: row;
