--- a/src/framework/theme/styles/themes/_nga.theme.default.scss
+++ b/src/framework/theme/styles/themes/_nga.theme.default.scss
@@ -81,6 +81,7 @@ $nga-card-border-radius: $nga-radius !default;
 $nga-card-padding: $nga-padding !default;
 
 $nga-header-height: 3.5rem !default;
+$nga-header-padding: $nga-padding !default;
 $nga-header-foreground: $nga-foreground-inverse !default;
 $nga-header-background: $nga-background-inverse !default;
 
